--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -7,10 +7,23 @@ html, body{
    height: 100%;
 }
 
+.whitespace-sm{
+   margin: 3%;
+}
+
+.whitespace-md{
+   margin: 5%;
+}
+
+.whitespace-lg{
+   margin: 10%;
+}
+
 /* CSS VARIABLES */
 :root{
    --dark: rgb(45, 45, 45);
    --light: rgb(255,255,255);
+   --light-offset: rgb(210,210,210);
 
    --primary-color: rgb(15, 15, 248);
    --accent-color:  rgb(154, 0, 201); 
@@ -34,4 +47,6 @@ html, body{
    --box-shadow: 0px 10px 30px var(--shadow-box);
 
    --main-font: 'Roboto', cursive;
+
+   --card-distance: -2rem; 
 }
