--- a/css/style.css
+++ b/css/style.css
@@ -12,146 +12,15 @@
         - Bitmoji is not lined up well 
         - Still too empty, fill up the place better
           Especially the bitmoji is just so lonely....
-    
+    3. Refactor the styles css files
+        to separate files so it makes sense
  */
 
-/* START NAVIGATION  */
-.logo{
-    border: 2px solid; 
-    border-radius: 6%;
-    border-color: var(--primary-color);
-    margin-left: 10%;
-    
-    letter-spacing: -0.3em;
-
-    padding: 0.2em 0.3em;
-    padding-right: 0.6em;
-    /* Render problem with letter spacing */
-    /* Reduces spacing mismatches offset of padding */
-    
-    transition: transform 0.35s ease-out; 
-}
-.logo:hover{
-    transition-timing-function: ease-in-out;
-    transition-property: all;
-    transform: scale(1.2,1.2);
-    border-radius:16%;
-    box-shadow: 0 0 5px 5px var(--primary-color);
-}
-
-.header_area .main-menu .navbar{
-    margin-left: 5rem;  
-}
-.header_area.main-menu.navbar{
-    padding: 1rem 20rem; 
-}
-.header_area .main-menu 
-.nav-item .nav-link{ 
-    font: normal 400 15px/2px var(--main-font);
-    text-transform: uppercase;
-    padding: 1.7rem;
-}
-
-.header_area .main-menu 
-.navbar-nav .active a{
-    color: var(--primary-color);
-
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-}
-.header_area .main-menu 
-.navbar-nav a:hover{
-    color: var(--primary-color);
-
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    
-    font-weight: 400;
-    border-bottom: 1px solid;   
-    
-}
-/* END NAVIGATION  */
-
+/* NAVIGATION  */
+@import url(./header-nav.css);
 /* BANNER AREA */
-/* .site-main .site-banner {
-    background: url(../images/backgrounds/abstract-technology-background-with-circuit-board-style-structur-vector.jpg) no-repeat 22% 82%;
-} */
-
-   .site-main .site-banner 
-   .site-title h3,
-   .site-main .site-banner 
-   .banner-image{
-       padding-top: 18%;
-       font-weight: 500;
-   }
-   .site-main .site-banner 
-   .site-title h3::after{
-       /* content: " "; */
-       height: 2px;
-       width: 18vw; 
-       background: black;
-       display: inline-block;
-       margin-left: 5%;
-       transform: translateY(-10px);
-   }
-
-   .site-main .site-banner .site-title h1{
-       font-size: 5rem; 
-       font-stretch: wider;
-       line-height: 1em;
-
-   }
-   .site-main .site-banner 
-   .site-title h4{
-    font-size: 1.5rem;
-    line-height: 2rem;
-   }
-   .site-main .site-banner 
-   .banner-image > img{
-    margin-top: 30%;
-    border-bottom: 20px;;
-    padding: 7rem 0;
-    width: 90rem;
-    
-   }
-
-   .site-main .site-banner 
-   .banner-image{
-    margin-top: 35%;
-    padding-top: 1.5rem;
-   }
-/* END BANNER AREA */
-.whitespace{
-    margin: 5%;
-}
-/* START ABOUT */
-    .site-main .about-area{
-        padding: 8rem 5rem;
-    }
-    .site-main .about-me 
-    .about-title h2>span{
-        display: block;
-        font: normal bold 49px/60px var(--main-font);
-        letter-spacing: 21px;
-    }
-
-    .site-main .about-me 
-    .about-image > img { 
-        object-fit: cover;
-        width: 100%;
-        max-height: 100%;
-        border-radius: 50%;
-        
-    }
-
-    .site-main .about-area 
-    .about-title paragraph > p{
-        
-    }
-
-
-/* END ABOUT  */
+@import url(./banner.css);
+/* ABOUT */
+@import url(./about.css);
+/* DETAILS */
+@import url(interests.css);
